gitops/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gnosis
  labels:
    project: gnosis
